tests/errors/intrinsics_06.f90
program intrinsics_06
    print *, ieor(1, 1_8)
end program